# nngs

./: README  README.md
.github/workflows/: ccpp.yml
mlrate/src/: .gitignore  Makefile
src/: .gitignore  Makefile.am  Makefile.in  comproc.c  config.h  config.h.in  configure  configure.ac  libtool  mailer.c  utils.c
